--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,16 +18,33 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
+  /* background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */
+  background: #fff;
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+.text-gradient {
+  @apply bg-gradient-to-r from-primary to-secondary text-transparent bg-clip-text;
+}
+
+.orange-gradient {
+  @apply bg-gradient-to-r from-primary to-secondary;
+}
+
+.cta {
+  @apply font-semibold px-10 py-3 rounded-md;
+}
+
+.cta:hover {
+  @apply shadow-md;
 }
